tests/errmsgs/t17854.nim
discard """
  errormsg: "expected: '=', but got: '## abcd'"
"""
const v: int
## abcd
